Add new content for look like and packages

--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -40,7 +40,7 @@ layout: 'base.njk'
 
     <!-- what can this look like section -->
     <section class="look-like-fade-sect">
-        <h3 class="look-like-title sect-title">
+        <h3 class="intro-title sect-title look-like-title fw-n">
             WHAT CAN THIS LOOK LIKE?
         </h3>
         <div class="look-like-fade">
@@ -59,7 +59,6 @@ layout: 'base.njk'
         </div>
     </section>
     <!-- END: what can this look like section -->
-    
 
     <!-- Parralex testimonial section -->
     <section class="testimonial-container">
@@ -120,6 +119,9 @@ layout: 'base.njk'
         <h2 class="sect-title how-title">
             Coaching packages
         </h2>
+        <h3 class="sect-subtitle">
+            Where will you begin?
+        </h3>
         <div class="signature-content">
             <div class="coaching-package-item">
                 <div class="signature-includes">
@@ -127,30 +129,37 @@ layout: 'base.njk'
                         Swift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        You need a specific change and you need it fast?  Then Swift is for you.  Together we take an intensive 5-6 week journey to get you where you want to be, quickly.
+                        Want to make valuable changes fast? This one's for you. DISC personality profiling will help discover how best to approach your personal roadblocks, and the most effective approach for quick, effective results.
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
                         <ul class="includes-list">
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                30 min Discovery Session
+                                Online assessment
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                4 * 50 min coaching sessions
+                                DISC personality profile session
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                <span>Email contact in between (3 * per week)</span>
+                                <span>Personal growth exercise</span>
                                 
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Access to free resources
+                                Follow-up and consolidation 30 minute coaching session
+                            </li>
+                            <li class="includes-list-item normal-text">
+                                <i class="fas fa-check-square"></i>
+                                15-page bespoke report tailored completely to you.
                             </li>
                         </ul>
                     </figure>
+                    <div class="package-price">
+                        <p class="normal-text">Investment: £155 (Value £265)</p>
+                    </div>
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -160,7 +169,7 @@ layout: 'base.njk'
                         signature
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        Not sure what the issue is let alone how to change it? Signature has your name written all over it. This voyage of discovery will help you identify where you are, where you want to be and more importantly how to get there.  
+                        Need help uncovering the roadblocks in your path to happiness? Signature has your name written all over it. This voyage of discovery will help you identify where you are, so you can get to exactly where you want to be.   
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
@@ -191,6 +200,9 @@ layout: 'base.njk'
                             </li>
                         </ul>
                     </figure>
+                    <div class="package-price">
+                        <p class="normal-text">Investment: £595 (Value £1075)</p>
+                    </div>
                 </div>
             </div>
             <hr class="half-width-hr d-md-none">
@@ -200,10 +212,7 @@ layout: 'base.njk'
                         Shift
                     </h2>
                     <p class="normal-text coaching-package-intro">
-                        If personal metamorphosis were a coaching program, this would be it!
-                        We take a deep and enlightening three step journey through self discovery, self release and self direction.
-                        Want to live your dream life? Make the Shift.
-
+                        If personal metamorphosis were a coaching program, this would be it! We take a deep and enlightening three step journey through self discovery, self release and self direction. Want to live a life without limits? Make the shift. 
                     </p>
                     <figure class="includes-fig">
                         <figcaption class="sect-subtitle how-sub text-left">Includes:</figcaption>
@@ -234,10 +243,13 @@ layout: 'base.njk'
                             </li>
                             <li class="includes-list-item normal-text">
                                 <i class="fas fa-check-square"></i>
-                                Creation of bespoke resources once per month
+                                Monthly creation of bespoke resources
                             </li>
                         </ul>
                     </figure>
+                    <div class="package-price">
+                        <p class="normal-text">Investment: £1100 (Value £2185)</p>
+                    </div>
                 </div>
             </div>
         </div>
