--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -81,39 +81,6 @@ layout: 'base.njk'
     </section>
     <!-- END: parralex testimonial section -->
 
-    <!-- how it works -->
-    <section class="how-it-works">
-        <h2 class="sect-title how-title">
-            How my program works:
-        </h2>
-        <div class="how-content">
-            <div class="how-item">
-                <h3 class="sect-subtitle how-sub">Step one</h3>
-                <h2 class="sect-title how-item-title">Discovery call</h2>
-                <p class="normal-text">
-                    This is one of my favourite parts!  We do an intensive deep dive into all things you.  We look at what’s important to you, what’s working for you in your life, what’s working against you and start to pull out repetitive themes, blocks and goals.
-                </p>
-            </div>
-            <div class="how-item">
-                <h3 class="sect-subtitle how-sub">Step two</h3>
-                <h2 class="sect-title how-item-title">DISC</h2>
-                <p class="normal-text">
-                    DISC is an incredibly powerful tool, to provide a deeper understanding of self.  Following completion of your online questionnaire we review your fears, motivators and drivers leaving you with the knowledge to improve your communication, empower your relationships and develop your confidence.
-                </p>
-            </div>
-            <div class="how-item">
-                <h3 class="sect-subtitle how-sub">Step three</h3>
-                <h2 class="sect-title how-item-title">Bi-weekly coaching</h2>
-                <p class="normal-text">
-                    Then the fun really begins. Our coaching sessions will be structured in a way that becomes familiar, fun, easy and always centred around you. We work with your conscious and subconscious to fuel your journey. Following my 6 step program we uncover your specific strategy for success and tap into it to radically elevate your life..
-                </p>
-            </div>    
-        </div>
-    </section>
-    <!-- END: how it works-->
-
-    {% include 'components/_quiz.njk' %}
-
     <!-- signature package -->
     <section class="signature-package">
         <h2 class="sect-title how-title">
@@ -254,8 +221,71 @@ layout: 'base.njk'
             </div>
         </div>
     </section>
-
     <!-- END: signature package -->
 
     {% include 'components/_services-parralax.njk' %}
+
+    <!-- how it works -->
+    <section class="how-it-works">
+        <h2 class="sect-title how-title">
+            How my program works:
+        </h2>
+        <div class="how-content">
+            <div class="how-item">
+                <h3 class="sect-subtitle how-sub">Step one</h3>
+                <h2 class="sect-title how-item-title">Restore</h2>
+                <h3 class="sect-subtitle">Change begins with you</h3>
+                <p class="normal-text">
+                    This is one of my favourite parts. We do an intensive deep dive into what success looks like for you. We empower you to discover what’s missing from your life, what you want to achieve and the qualities you’d like to embody; be them emotional, physical or mental. During the coaching process you’ll realise that you hold the power to achieve your version of happiness. Reaching your destination is easy when you become the sat nav.
+                </p>
+            </div>
+            <div class="how-item">
+                <h3 class="sect-subtitle how-sub">Step two</h3>
+                <h2 class="sect-title how-item-title">Release</h2>
+                <h3 class="sect-subtitle">Say your goodbyes</h3>
+                <p class="normal-text">
+                    Before we start getting deep into the change, we use a personality profiling tool called DISC, which is recognised worldwide as a powerful tool to accelerate personal growth. We then review your fears, motivators and drivers, before we address what you need to let go of and how to switch your internal dialogue to start believing in what you are capable of. Once we can clearly see the blockers holding you back, we can work on overcoming them.
+                </p>
+            </div>
+            <div class="how-item">
+                <h3 class="sect-subtitle how-sub">Step three</h3>
+                <h2 class="sect-title how-item-title">Reveal</h2>
+                <h3 class="sect-subtitle">Set your intentions</h3>
+                <p class="normal-text">
+                    Then the fun really begins. Our coaching sessions will be structured in a fun, familiar way, and most importantly, be centred around you. We work with your conscious and subconscious to set your gut-informed goals and stick to them. We uncover and build your bespoke strategy for success and arm you with the tools to put them into practice. Finally, you can start living the life you’ve imagined.
+                </p>
+            </div>    
+        </div>
+    </section>
+    <!-- END: how it works-->
+
+    <hr class="half-width-hr">
+
+    <!-- Client love section -->
+    <div class="testimonial-alone client-love">
+        <h3 class="sect-title">
+                Client love 
+        </h3>
+        <h3 class="sect-subtitle">
+                Hear from the women who have changed their lives
+        </h3>
+        <div class="testimonial-alone-content">
+            <div class="testimonial-alone-exert">
+                <p>
+                    “Mhairi was hugely inspirational and made me realise I can do anything I set my mind to ”
+                </p>
+            </div>
+            <div class="testimonial-alone-author">
+                <h3 class="rob-font testimonial-alone-author-job">
+                    - Jo Christie, Travel Retail Manager U.K. and Ireland
+                </h3>
+            </div>
+        </div>
+        <a class="btn-dark-pink services-cta-btn" href="/testimonials">MORE SUCCESS STORIES </a>
+    </div>
+    <!-- END: Client love section -->
+
+    <hr class="half-width-hr">
+
+    {% include 'components/_quiz.njk' %}
          
