Update new content testimon

--- a/src/site/testimonials.njk
+++ b/src/site/testimonials.njk
@@ -17,96 +17,15 @@ layout: 'base.njk'
     <section class="services-intro testimonial-intro you-will-gain-section">
         <h2 class="services-intro-subtitle rob-font">
             Ready for a breakthrough?
-            <br>
-            <br>
-            Working with me you will gain
         </h2>
-        <div class="you-will-gain">
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        STRENGTH 
-                    </h2>
-                    <p class="normal-text">
-                        A deep level of self awareness and self confidence 
-                    </p>
-                </div>
-            </div>
-            <hr class="half-width-hr pink-hr d-md-none">
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        SELF WORTH 
-                    </h2>
-                    <p class="normal-text">
-                        A healthy dialogue and relationship with your innermost self 
-                    </p>
-                </div>
-            </div>
-            <hr class="half-width-hr pink-hr d-md-none">
-            
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        SELF FOCUS  
-                    </h2>
-                    <p class="normal-text">
-                        Tools to live authentically and move forward with focus  
-                    </p>
-                </div>
-            </div>
-            <hr class="half-width-hr pink-hr d-md-none">
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        RELEASE
-                    </h2>
-                    <p class="normal-text">
-                        The ability to let go of limiting beliefs and negative patterns
-                    </p>
-                </div>
-            </div>
-            <hr class="half-width-hr pink-hr d-md-none">
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        RESET 
-                    </h2>
-                    <p class="normal-text">
-                        The power to be present and step out of the anxiety cycle
-                    </p>
-                </div>
-            </div>
-            <hr class="half-width-hr pink-hr d-md-none">
-            <div class="gain-item">
-                <div class="gain-item-content">
-                    <h2 class="sect-subtitle">
-                        ROAD MAP 
-                    </h2>
-                    <p class="normal-text">
-                        A personal life plan, your roadmap to your dream life  
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="services-intro not-alone">
         <h3 class="services-intro-subtitle rob-font">
-            You are not alone!
+            Hear from the women who have changed their lives
         </h3>
-        <div class="intro-text testimonial-intro-text">
-            <p class="normal-text">
-                I became a coach in order to make, in my own small way, a positive  difference in the world. 
-                I’ve been lucky enough to work with many incredible clients over the years and watch them thrive. 
-            </p>
-            <br>
-            <p class="sect-subtitle">
-                Here are a few of their wonderful voices.
-            </p>
-        </div>
-    </section>
+    </section>    
     <!-- END: intro section -->
-    
+
+    <hr class="half-width-hr">
+
     <!-- testimonials section -->
     <section class="testimonials-section">
         <div class="testimonial-item">
@@ -125,9 +44,7 @@ layout: 'base.njk'
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Words can’t quite describe how happy I am. After a few sessions, my nearest and dearest saw an almost physical change in me, radiating more positivity and embracing challenges.
-                    I’ve felt myself become a stronger and more assured person, feeling more confident in my choices and behaviour.
-
+                    Words can’t quite describe how happy I am. After a few sessions, my nearest and dearest saw an almost physical change in me, radiating more positivity and embracing challenges. I’ve felt myself become a stronger and more assured person, feeling more confident in my choices and behaviour.
                 </p>
             </div>
         </div>
@@ -143,12 +60,12 @@ layout: 'base.njk'
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “Mhairi really helped in gaining more confidence….If I ever feel overwhelmed I just go back to my sessions with Mhairi ”
+                    “Mhairi really helped me gain more confidence. If I ever feel overwhelmed, I just go back to my sessions with her”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Mhairi really helped me in gaining more confidence in my work environment. I struggled with prioritising and Mhairi coached me in ways I could do this that suited my style. I loved how she asked me questions that enabled me to think of the answer for myself. I had never had coaching sessions before so it was completely new to me. Mhairi was a great coach and made my first experience really enjoyable and interesting. She’s definitely helped how I think about things and I feel more able to manage my workload. If I ever feel overwhelmed I just go back to my sessions with Mhairi and remember what I’ve learnt.
+                    I had never had coaching sessions before so it was completely new to me. Mhairi was a great coach and made my first experience really enjoyable and interesting. Mhairi really helped me gain more confidence in my work environment. I struggled with prioritising and Mhairi coached me in ways I could do this that suited my personality type. I loved how she asked questions that enabled me to come up with solutions myself. She’s definitely helped me manage my workload and change the way I approach things. If I ever feel overwhelmed, I just go back to my sessions with Mhairi and remember what I’ve learnt.
                 </p>
             </div>
         </div>
@@ -164,12 +81,12 @@ layout: 'base.njk'
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “Mhairi was hugely inspirational and made me realise I can do anything I set my mind on ”
+                    “Mhairi was hugely inspirational and made me realise I can do anything I set my mind to”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Mhairi has made me think very differently and realize there are ways around obstacles. I was constantly telling myself I couldn’t do things… I was so busy being busy. I decided to give up smoking and although I had a few mishaps I’m quite proud of my 41 days smoke free.  Mhairi was hugely inspirational and made me realise I can do anything I set my mind on.
+                    Mhairi has helped me think very differently and realise there are ways around obstacles. Before working with Mhairi, I was constantly telling myself I couldn’t do things. I was so busy being busy. I decided to give up smoking and although I had a few mishaps I’m quite proud of my 41 days smoke free. Mhairi was hugely inspirational and made me realise I can do anything I set my mind on.
                 </p>
             </div>
         </div>
@@ -190,7 +107,7 @@ layout: 'base.njk'
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    The experience of having a coach really made me reflect on the positive aspects of my life and not the negative. It gave me goals and made me look at things in such a different light which in the end made me a more confident and happy person and this has continued even after the coaching sessions ended. Amazing!!
+                    The experience of having a coach really made me reflect on the positive aspects of my life and not the negative. It gave me goals and made me look at things in such a different light, which in turn made me a more confident and happy person. This has continued even after the coaching sessions ended. Amazing!
                 </p>
             </div>
         </div>
@@ -206,19 +123,17 @@ layout: 'base.njk'
             </div>
             <div class="testimonial-exert">
                 <p>
-                    “I have gone from not knowing how I could progress….to having a clear vision and direction ”
+                    “I have gone from not knowing how I could progress in my career, to having a clear vision and direction. ”
                 </p>
             </div>
             <div class="testimonial-main">
                 <p class="normal-text">
-                    Mhairi encouraged me to ask myself questions that I wouldn’t have otherwise considered. She gave me new perspective on what I am capable of which I now use in my day to day work life to achieve my goals. I have gone from not knowing how I could progress in my career, to having a clear vision and direction of how to get there.
+                    Mhairi encouraged me to ask myself questions that I wouldn’t have otherwise considered. She gave me a new perspective on what I am capable of, which I now use in my day-to-day work life to achieve my goals. I have gone from not knowing how I could progress in my career, to having a clear vision and direction of how to get there.
                 </p>
             </div>
         </div>
     </section>
     <!-- END: testimonials section -->
-
-    {% include 'components/_quiz.njk' %}    
 
     {% include 'components/_services-parralax.njk' %}
     
