--- a/src/site/contact.njk
+++ b/src/site/contact.njk
@@ -15,8 +15,7 @@ layout: 'base.njk'
                 I'M SCOTTISH, IT'S OUR FAVOURITE THING TO DO
             </h2>
             <p class="normal-text contact-hero-text">
-                Keep scrollin' to contact me about working together, sponsorships, interviews/events, or
-                any questions you have!
+                Whether it’s about working together, sponsorships, interviews, events or maybe you just have a few questions - I’d love to hear from you.
             </p>
         </div>
     </section>
@@ -29,7 +28,7 @@ layout: 'base.njk'
                 Contact
             </h2>
             <h3 class="contact-form-subtitle normal-text">
-                Fill out the form below or email us at info@revolvecoaching.co.uk
+                Fill out the form below or email info@revolvecoaching.co.uk
             </h3>
             <div class="contact-form">
                 <form id="contactForm" name="Contact" action="" method="POST" data-netlify="true" encType="multipart/form-data">
@@ -48,9 +47,8 @@ layout: 'base.njk'
                         </div>
                         <div class="form-group hear">
                             <hr class="form-hr">
-                            <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about us?" required>
+                            <input type="text" class="form-field" id="hear-field" placeholder="How did you hear about Mhairi?" required>
                         </div>
-                        <!-- <input id="customSubject" type="hidden" name="subject" value="" class="hidden"> -->
                         <div class="form-group message">
                             <hr class="form-hr">
                             <textarea class="form-field" name="message" id="message-field" rows="" placeholder="Message" required></textarea>
@@ -76,25 +74,25 @@ layout: 'base.njk'
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">how did you get started as a life coach?</h3>
                 <p class="normal-text">
-                    Looking back now I can see that a personal disaster was absolutely the trigger point for me radically changing my life for the better. I knew I wanted to serve people like me and I wanted to do it in the most positive way possible….so I did a diploma in life coaching with the Coaching Academy.
+                    A personal disaster was absolutely the trigger point for me radically changing my life for the better. I knew I wanted to serve people like me and I wanted to do it in the most positive way possible. That led me to do my diploma in life coaching with the Coaching Academy.
                 </p>
             </div>
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">The difference between your main 3 offerings?</h3>
                 <p class="normal-text">
-                    The main differences are length of program, frequency of sessions and depth of discovery therefore change. 
+                    The main differences are length of program, frequency of sessions and depth of discovery and therefore, change. 
                     <br>
-                    <span class="fw-b">Swift:</span> short, frequent and broad. 
+                    <span class="fw-b">Swift:</span>Short, frequent and broad. 
                     <br>
-                    <span class="fw-b">Signature:</span> medium, every 2 weeks and extensive. 
+                    <span class="fw-b">Signature:</span>Medium, every 2 weeks and extensive. 
                     <br>
-                    <span class="fw-b">Shift:</span> Long, every 3 weeks and total.
+                    <span class="fw-b">Shift:</span>Long, every 3 weeks and total.
                 </p>
             </div>
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">WOULD YOU TELL ME IF COACHING WASN’T RIGHT FOR ME?</h3>
                 <p class="normal-text">
-                    Of cuorse. I make it a priority to only take on clients for whom coaching is right and I am a good fit for.  That's why the initial Clarity call is so important. Its free, no obligation and within that we explore your needs and our chemistry.
+                    Of course. I make it a priority to only take on clients for whom coaching is right and I am a good fit for.  That's why the initial call is so important. Its free, no obligation and within that we explore your needs and our chemistry.
                 </p>
             </div> 
             <div class="faq-item">
@@ -112,13 +110,13 @@ layout: 'base.njk'
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">when is your next live event?</h3>
                 <p class="normal-text">
-                    Lockdown has changed the world so currently I won’t be running any live events.  However watch this space for my upcoming facebook group where we can get the party started again (albeit in our PJ’s with wine).
+                    Lockdown has changed the world so currently I won’t be running any live events.  However watch this space for my upcoming Facebook group where we can get the party started again (albeit in our PJ’s with wine).
                 </p>
             </div>    
             <div class="faq-item">
                 <h3 class="sect-subtitle who-for-sub faq-sub">do you offer group coaching?</h3>
                 <p class="normal-text">
-                    Ooooh good question!  I’m currently working on my group coaching course, keep your eyes peeled on instagram for sneak peaks coming soon.  
+                    Ooooh good question! I’m currently working on my group coaching course, keep your eyes peeled on Instagram for sneak peeks coming soon.  
                 </p>
             </div> 
             <div class="faq-item">
