Add meta title and desc

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -1,6 +1,8 @@
 ---
 
 layout: 'base.njk'
+title: 'Meet Mhairi. The Roadblock Coach - Life Coaching by Mhairi Todd'
+metaDescription: 'Accredited Transformational Coach dedicated to helping you overcome roadblocks and deal with anxiety, stress, mum guilt and more. Book your free call. DISC Certified.'
 
 ---
     <!-- hero section -->
