--- a/src/site/contact.njk
+++ b/src/site/contact.njk
@@ -1,6 +1,8 @@
 ---
 
 layout: 'base.njk'
+title: 'Contact Mhairi Todd - The Roadblock Coach'
+metaDescription: 'Book your free call with Mhairi Todd. Accredited Life Coach specialising in transformation, overcoming roadblocks and helping you create your best life. DISC Certified.'
 
 ---
 
