--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -16,7 +16,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mhairi Todd - Revolve Coaching</title>
+    <meta name="Description" content="{{ metaDescription }}">
+    <title>{{ title }}</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_ico/apple-touch-icon.png">
