--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -1,7 +1,8 @@
 ---
 
 layout: 'base.njk'
-
+title: 'The Roadblock Coach - Life Coaching by Mhairi Todd'
+metaDescription: 'Accredited Transformational Coach dedicated to helping you overcome roadblocks and move toward a happier, fulfilling life via online coaching sessions. DISC Certified.'
 ---
 
 <!-- hero section -->
