--- a/src/site/services.njk
+++ b/src/site/services.njk
@@ -1,6 +1,8 @@
 ---
 
 layout: 'base.njk'
+title: 'Life Coaching Programs by Mhairi Todd - The Roadblock Coach'
+metaDescription: 'Accredited Transformational Coach helping you overcome stress, anxiety, fear to create your perfect life via online coaching sessions. Book your free call. DISC Certified.'
 
 ---
 
