--- a/src/site/testimonials.njk
+++ b/src/site/testimonials.njk
@@ -1,6 +1,8 @@
 ---
 
 layout: 'base.njk'
+title: 'Client Success Stories by Mhairi Todd - The Roadblock Coach'
+metaDescription: 'Hear from the women who have transformed their lives, careers, relationships and more by working with Mhairi Todd. Accredited Life Coach. DISC Certified.'
 
 ---
 
